# COpet_pilot

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CoPet_Pilot_general_spec.md  README.md  analyze_wav.py  assistant.py  assistant_ui.py  log_esp_serial.py  monitor.py  partitions.csv  sdkconfig.defaults  speaker.py  start.bat  test_enhance.py  test_filter.py
android_voice_assistant/: README.md  settings.gradle.kts
android_voice_assistant/app/: build.gradle.kts
android_voice_assistant/app/src/main/: AndroidManifest.xml
android_voice_assistant/app/src/main/java/com/example/espvoiceassistant/: MainActivity.kt
android_voice_assistant/scripts/: download_vosk_ru_model.ps1
docs/: 00_learning_strategy.md  01_architecture.md  02_hardware_map.md  03_module_plan.md  04_testing_checklist.md  05_learning_log_template.md  06_bom_and_interfaces.md  07_pin_planning_template.md  08_project_milestones.md  09_esp32_devkit_hardware_test.md  10_audio_learning_log.md  11_menu_learning_log.md  12_mpu6050_learning_log.md  13_focus_mode_learning_log.md  14_ble_advertising_learning_log.md  15_ble_message_learning_log.md  16_audio_loopback_learning_log.md  17_animation_learning_log.md  18_desk_mode_learning_log.md  19_emotion_and_sensor_reactions.md  20_animation_behavior_decisions.md  21_wifi_station_learning_log.md  22_sound_event_plan.md  23_boot_screen_learning_log.md  24_behavior_engine_v1_spec.md  25_behavior_engine_learning_log.md  26_behavior_engine_v2_group.md  27_assistant_m7_plan.md
docs/architecture/: adr-001-esp32-wroom-32-target.md  adr-002-direct-wifi-cloud.md  adr-003-desk-first-state-machine.md  adr-004-defer-outdoor-mode.md  cloud_api_contract.md
docs/media/: README.md
docs/ux/: 01_user_cases_and_screen_flow.md
esp_serial_mic_c6/: CMakeLists.txt  btnwatch.py  btnwatch2.py  capture_logs.py  dumptext.py  listen.py  rawcheck.py  resetread.py  sdkconfig  sdkconfig.defaults  usb_capture.py  wifi_test.py
esp_serial_mic_c6/main/: CMakeLists.txt  oled_eyes.c  oled_eyes.h  serial_mic_c6_main.c
lessons/: phase_01_esp32_base.md  phase_02_st7789_display.md  phase_03_input_encoder_touch.md  phase_04_sht31_mpu6050.md  phase_05_audio.md  phase_06_sd_mini_tv.md  phase_07_ble_phone_bridge.md  phase_08_gps_outdoor.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
main/core/: copet_behavior.c  copet_behavior.h  copet_modes.h  copet_speech.c  copet_speech.h  music_detector.c  music_detector.h
main/drivers/: audio_loopback.c  audio_loopback.h  copet_audio.c  copet_audio.h  copet_ble.c  copet_ble.h  copet_display.c  copet_display.h  copet_encoder.c  copet_encoder.h  copet_i2c.c  copet_i2c.h  copet_sht31.c  copet_sht31.h  mpu6050.c  mpu6050.h  touch_button.c  touch_button.h
main/modes/: animation_mode.c  animation_mode.h  assistant_mode.c  assistant_mode.h  desk_mode.c  desk_mode.h  focus_mode.c  focus_mode.h  menu_mode.c  menu_mode.h  settings_mode.c  settings_mode.h
main/services/: assistant_service.c  assistant_service.h  copet_nvs.c  copet_nvs.h  weather_service.c  weather_service.h  wifi_credentials.c  wifi_credentials.h  wifi_provisioning.c  wifi_provisioning.h  wifi_service.c  wifi_service.h
main/ui/: animation_ui.c  animation_ui.h  assistant_ui.c  assistant_ui.h  boot_ui.c  boot_ui.h  desk_ui.c  desk_ui.h  diag_ui.c  diag_ui.h  focus_ui.c  focus_ui.h  menu_ui.c  menu_ui.h  pip_face_port.c  pip_face_port.h  settings_ui.c  settings_ui.h  ui_canvas.c  ui_canvas.h
test/: CMakeLists.txt  desk_mode_test.c  main.c
test/host/: README.md  run_tests.ps1  test_animation_mode.c  test_assistant_mode.c  test_assistant_ui.c  test_copet_behavior.c  test_copet_speech.c  test_desk_mode.c  test_focus_mode.c  test_menu_mode.c  test_music_detector.c  test_settings_mode.c  test_util.h  test_wifi_credentials.c
tools/: allow_ollama_firewall.bat  convert_animation.ps1  convert_sounds.ps1  generate_speech.ps1  mock_assistant_api.py
