idf_component_register(
    SRCS
        "app_main.c"
        "core/copet_behavior.c"
        "core/copet_speech.c"
        "core/music_detector.c"
        "drivers/copet_audio.c"
        "drivers/copet_ble.c"
        "drivers/copet_display.c"
        "drivers/copet_encoder.c"
        "drivers/copet_i2c.c"
        "drivers/copet_sht31.c"
        "drivers/mpu6050.c"
        "drivers/touch_button.c"
        "modes/assistant_mode.c"
        "modes/desk_mode.c"
        "modes/focus_mode.c"
        "modes/menu_mode.c"
        "modes/settings_mode.c"
        "services/assistant_service.c"
        "services/copet_nvs.c"
        "services/weather_service.c"
        "services/wifi_credentials.c"
        "services/wifi_provisioning.c"
        "services/wifi_service.c"
        "ui/assistant_ui.c"
        "ui/boot_ui.c"
        "ui/desk_ui.c"
        "ui/diag_ui.c"
        "ui/focus_ui.c"
        "ui/menu_ui.c"
        "ui/settings_ui.c"
        "ui/pip_face_port.c"
        "ui/ui_canvas.c"
    INCLUDE_DIRS "."
    EMBED_FILES
        "assets/sounds/menu_confirm.pcm"
        "assets/sounds/menu_move.pcm"
        "assets/sounds/focus_start.pcm"
        "assets/sounds/focus_complete.pcm"
        "assets/sounds/angry_grunt.pcm"
        "assets/speech/word_zero.pcm"
        "assets/speech/word_one.pcm"
        "assets/speech/word_two.pcm"
        "assets/speech/word_three.pcm"
        "assets/speech/word_four.pcm"
        "assets/speech/word_five.pcm"
        "assets/speech/word_six.pcm"
        "assets/speech/word_seven.pcm"
        "assets/speech/word_eight.pcm"
        "assets/speech/word_nine.pcm"
        "assets/speech/word_ten.pcm"
        "assets/speech/word_eleven.pcm"
        "assets/speech/word_twelve.pcm"
        "assets/speech/word_thirteen.pcm"
        "assets/speech/word_fourteen.pcm"
        "assets/speech/word_fifteen.pcm"
        "assets/speech/word_sixteen.pcm"
        "assets/speech/word_seventeen.pcm"
        "assets/speech/word_eighteen.pcm"
        "assets/speech/word_nineteen.pcm"
        "assets/speech/word_twenty.pcm"
        "assets/speech/word_thirty.pcm"
        "assets/speech/word_forty.pcm"
        "assets/speech/word_fifty.pcm"
        "assets/speech/word_degrees.pcm"
        "assets/speech/word_minus.pcm"
        "assets/speech/word_oh.pcm"
        "assets/speech/word_oclock.pcm"
        "assets/speech/word_clear.pcm"
        "assets/speech/word_cloudy.pcm"
        "assets/speech/word_fog.pcm"
        "assets/speech/word_rain.pcm"
        "assets/speech/word_snow.pcm"
        "assets/speech/word_storm.pcm"
    REQUIRES
        bt
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_i2s
        esp_driver_spi
        esp_lcd
        esp_event
        esp_http_client
        esp_http_server
        esp-tls
        esp_netif
        esp_timer
        esp_wifi
        json
        nvs_flash
)
